--- a/Tutorial_06/blog/templates/base.html
+++ b/Tutorial_06/blog/templates/base.html
@@ -1,11 +1,15 @@
 <!-- templates/base.html -->
+{% load static %}
+
 <html>
 <head>
-<title>Django blog</title>
+    <title>Django blog</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1><a href="{% url 'home' %}">Django Blog</a></h1>
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
     </header>
     <div>
         {% block content %}
